systemd: don't run ModemManager in containers
This assumes the needed modem hardware is typically not available
inside containers. If however, the local admin configures the container
to get access to the hardware in question, ModemManager can be
instructed to run in that specific container by doing:

`sudo systemctl edit ModemManager.service`

Then entering the following text in the editor:

  [Unit]
  # Remove condition of "not container"
  ConditionVirtualization=

Upon saving/exiting, ModemManager can then be started with:

`sudo systemctl start ModemManager.service`

Signed-off-by: Simon Deziel <simon@sdeziel.info>

--- a/data/ModemManager.service.in
+++ b/data/ModemManager.service.in
@@ -2,6 +2,7 @@
 Description=Modem Manager
 After=@MM_POLKIT_SERVICE@
 Requires=@MM_POLKIT_SERVICE@
+ConditionVirtualization=!container
 
 [Service]
 Type=dbus
