dispatcher-connection: new dispatcher for connection status scripts
The user or the packages can install custom dispatcher scripts that
will be run by the ModemManaer daemon itself upon bearer connection
status updates.

Scripts installed by users should go into the
/etc/ModemManager/connection.d directory.

Scripts installed by packages should go into the
/usr/lib/ModemManager/connection.d directory.

The name of the script will specify the order how it's run, so it's
suggested to name them with a numeric prefix, e.g. "99-something".

(cherry picked from commit e8612671ef6efcec9342d14506894ff5e5b5ddda)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -294,6 +294,8 @@ ModemManager_CPPFLAGS = \
 	-DPLUGINDIR=\"$(pkglibdir)\" \
 	-DFCCUNLOCKDIRPACKAGE=\"${pkglibdir}/fcc-unlock.d\" \
 	-DFCCUNLOCKDIRUSER=\"${pkgsysconfdir}/fcc-unlock.d\" \
+	-DCONNECTIONDIRPACKAGE=\"${pkglibdir}/connection.d\" \
+	-DCONNECTIONDIRUSER=\"${pkgsysconfdir}/connection.d\" \
 	-DMM_COMPILATION \
 	$(NULL)
 
@@ -315,6 +317,8 @@ ModemManager_SOURCES = \
 	mm-auth-provider.c \
 	mm-dispatcher.h \
 	mm-dispatcher.c \
+	mm-dispatcher-connection.h \
+	mm-dispatcher-connection.c \
 	mm-dispatcher-fcc-unlock.h \
 	mm-dispatcher-fcc-unlock.c \
 	mm-filter.h \
