--- a/src/meson.build
+++ b/src/meson.build
@@ -201,6 +201,7 @@ sources = files(
   'mm-context.c',
   'mm-device.c',
   'mm-dispatcher.c',
+  'mm-dispatcher-connection.c',
   'mm-dispatcher-fcc-unlock.c',
   'mm-filter.c',
   'mm-iface-modem-3gpp.c',
@@ -255,6 +256,8 @@ c_args = [
   '-DPLUGINDIR="@0@"'.format(mm_prefix / mm_pkglibdir),
   '-DFCCUNLOCKDIRPACKAGE="@0@"'.format(mm_prefix / mm_pkglibdir / 'fcc-unlock.d'),
   '-DFCCUNLOCKDIRUSER="@0@"'.format(mm_prefix / mm_pkgsysconfdir / 'fcc-unlock.d'),
+  '-DCONNECTIONDIRPACKAGE="@0@"'.format(mm_prefix / mm_pkglibdir / 'connection.d'),
+  '-DCONNECTIONDIRUSER="@0@"'.format(mm_prefix / mm_pkgsysconfdir / 'connection.d'),
 ]
 
 if enable_qrtr
