build: rename directory where fcc unlocks are kept
(cherry picked from commit 99232154b34e0b8034e84678959454fd9763336e)

--- a/meson.build
+++ b/meson.build
@@ -364,7 +364,7 @@ version_conf = {
 
 subdir('po')
 subdir('data')
-subdir('data/fcc-unlock')
+subdir('data/dispatcher-fcc-unlock')
 subdir('introspection')
 subdir('include')
 
