data: add example connection dispatcher
Just a minimal example that prints the events in syslog

(cherry picked from commit 7960b365d50c2a9e687a75b46f044e8e52b72b65)

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,5 +1,5 @@
 
-SUBDIRS = . dispatcher-fcc-unlock tests
+SUBDIRS = . dispatcher-connection dispatcher-fcc-unlock tests
 
 edit = @sed \
        -e 's|@sbindir[@]|$(sbindir)|g' \
