data: add example connection dispatcher
Just a minimal example that prints the events in syslog

--- a/configure.ac
+++ b/configure.ac
@@ -577,6 +577,7 @@ Makefile
 data/Makefile
 data/ModemManager.pc
 data/mm-glib.pc
+data/dispatcher-connection/Makefile
 data/dispatcher-fcc-unlock/Makefile
 data/tests/Makefile
 data/tests/org.freedesktop.ModemManager1.service
