linktop: new port type hints
Flag ttyACM0 as data port and ttyACM1 as primary port, as per
https://bugzilla.gnome.org/show_bug.cgi?id=637140#c10

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/14

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1002,6 +1002,10 @@ libmm_plugin_linktop_la_CPPFLAGS = \
 libmm_plugin_linktop_la_LDFLAGS = $(PLUGIN_COMMON_LINKER_FLAGS)
 libmm_plugin_linktop_la_LIBADD = $(builddir)/libhelpers-linktop.la
 
+dist_udevrules_DATA += linktop/77-mm-linktop-port-types.rules
+
+AM_CFLAGS += -DTESTUDEVRULESDIR_LINKTOP=\"${srcdir}/linktop\"
+
 endif
 
 ################################################################################
