build,meson: Fix udev rules and keyfiles tests
The port to the meson build system a set of defines were lost, that
made the udev rules and the keyfiles tests to not run properly.

This has been changed so defines are now in their proper place and
tests are run properly.

Fixes #537

--- a/meson.build
+++ b/meson.build
@@ -353,6 +353,7 @@ foreach plugin_name, plugin_reqs: plugins_options_reqs
         break
       endif
     endforeach
+    config_h.set('ENABLE_PLUGIN_' + plugin_name.underscorify().to_upper(), true)
   endif
   plugins_options += {plugin_name: plugin_enabled}
 endforeach
