plugins,simtech: fix module name
This was fixed in git main in 0bc0831b22, along with the udev rules
tests. Don't really care much about fixing the tests in the stable
1.18, so just fixing the module name in the simtech plugin definition.

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/554

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -768,7 +768,7 @@ if plugins_options['simtech']
   plugins += {'plugin-simtech': {
     'plugin': true,
     'helper': {'sources': files('simtech/mm-modem-helpers-simtech.c'), 'include_directories': plugins_incs, 'c_args': common_c_args + ['-DMM_MODULE_NAME="simtech"']},
-    'module': {'sources': sources, 'include_directories': plugins_incs, 'c_args': common_c_args + ['-DMM_MODULE_NAME="quectel"']},
+    'module': {'sources': sources, 'include_directories': plugins_incs, 'c_args': common_c_args + ['-DMM_MODULE_NAME="simtech"']},
     'test': {'sources': files('simtech/tests/test-modem-helpers-simtech.c'), 'include_directories': plugins_incs + [include_directories('simtech')], 'dependencies': libport_dep},
   }}
 
